[package]
name = "OOMmacro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rustc-demangle = "0.1"
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
proc-macro2 = "1.0"
OOMGuardAllocator = { path = "../../allocator/allocator_crate"}
