[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
OOMmacro = { path = "../../macro/macro_crate"}
OOMGuardAllocator = { path = "../../allocator/allocator_crate"}

[profile.dev]
opt-level = 0
debug = false
